Fix portfolio list gaps

--- a/css/styles.css
+++ b/css/styles.css
@@ -339,6 +339,7 @@ img {
     flex-direction: row;
     flex-wrap: wrap;
     gap: 24px;
+    row-gap: 72px;
   }
 
   .features-list-item {
